--- a/src/app/main-content/skill-set/skills-mobile.component.scss
+++ b/src/app/main-content/skill-set/skills-mobile.component.scss
@@ -10,7 +10,7 @@ $paddingRightText1200: 80px;
 .skills-section {
   background: $color-bg;
   width: 100%;
-  margin-top: -240px;
+  margin-top: 0px;
   margin-bottom: 50px;
 }
 
